--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,4 +1,6 @@
 Django==2.0.1
+django-q==1.0.2
+django-redis==4.10.0
 django-cors-headers==2.1.0
 djangorestframework==3.7.7
 djangorestframework-jwt==1.11.0
@@ -10,3 +12,5 @@ simplejson==3.15.0
 gevent==1.3.4
 gunicorn==19.8.1
 mysqlclient==1.4.6
+wheel==0.29.0
+mysql-replication==0.13
