--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,9 +12,10 @@ ldap3==2.4.1
 simplejson==3.15.0
 gevent==1.3.4
 gunicorn==19.8.1
-mysqlclient==1.4.6
 wheel==0.29.0
+mysqlclient==1.4.6
 mysql-replication==0.13
 aliyun-python-sdk-core
 aliyun-python-sdk-rds
 aliyun-python-sdk-cms
+django-unixtimestampfield
